k8s/hotel-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: hotel-service
  namespace: travelease

spec:
  selector:
    app: hotel-service

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3003

  type: ClusterIP
